@@ -57,43 +57,31 @@ LITEIDE_EXECOPT=-e
 <h3 id="litebuild_edit">Configure Build</h3>
 <p>Menu: View -> Options -> LiteBuild or Welcome: Options -> LiteBuild</p>
 <p>Double clicked *.xml file to editor</p>
-<p>Example linux gosrc.xml</p>
-<pre>&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+<p>Example linux gopackage.xml</p>
+<pre>&lt;?xml version="1.0" encoding="UTF-8"?&gt; 
 &lt;mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'&gt;
-&lt;mime-type type="text/x-gosrc" id="gosrc"&gt;
-&lt;lookup mime-type="text/x-gomake" file="Makefile" top="1"/&gt;
-&lt;lookup mime-type="text/x-gopro" file="*.e64" top="1"/&gt;
-&lt;action id="Build" img="go/build.png" key="F7" cmd="${LITEAPPDIR}/gopromake" args="-gofiles ${EDITORNAME} -o ${TARGETNAME}" save="editor" output="true" codec="utf-8" regex="([\w\d:_\\/\.]+):(\d+)" /&gt;
-&lt;action id="Clean" img="go/clean.png" cmd="${LITEAPPDIR}/gopromake" args="-gofiles ${EDITORNAME} -o ${TARGETNAME} -clean=obj" output="true" codec="utf-8"/&gt;
-&lt;action id="CleanAll" img="go/cleanall.png" cmd="${LITEAPPDIR}/gopromake" args="-gofiles ${EDITORNAME} -o ${TARGETNAME} -clean=all" output="true" codec="utf-8"/&gt;
-&lt;action id="Exec" img="go/exec.png" key="F5" cmd="${LITEAPPDIR}/goexec" args="${TARGETNAME}" output="false"/&gt;
-&lt;action id="Run" img="go/run.png" key="CTRL+F5" cmd="${TARGETPATH}" args="" output="true" codec="utf-8"/&gt;
-&lt;action id="BuildAndRun" img="go/buildandrun.png" key="CTRL+F7" task="Build;Run"/&gt;
-&lt;/mime-type&gt;
+    &lt;mime-type type="text/x-gopackage" id="go-package" work="$(PROJECT_DIR)"&gt;
+        &lt;config id="Go" name="GO" value="$(GOROOT)/bin/go"/&gt;
+        &lt;config id="GoExec" name="GOEXEC" value="$(LITEAPPDIR)/goexec"/&gt;
+        &lt;config id="ErrRegex" name="ERRREGEX" value="([\w\d_\\/\.]+):(\d+):"/&gt;
+        &lt;custom id="TargetArgs" name="TARGETARGS" value=""/&gt;
+        &lt;custom id="BuildArgs" name="BUILDARGS" value=""/&gt;
+        &lt;custom id="InstallArgs" name="INSTALLARGS" value=""/&gt;
+        &lt;action id="Build" img="blue/build.png" key="Ctrl+B;F7" cmd="$(GO)" args="build $(BUILDARGS)" save="all" output="true" codec="" regex="$(ERRREGEX)" /&gt;
+        &lt;action id="Install" img="blue/install.png" key="Ctrl+F8" cmd="$(GO)" args="install $(INSTALLARGS)" save="all" output="true"/&gt;
+        &lt;action id="Clean" img="blue/clean.png" cmd="$(GO)" args="clean" save="all" output="true"/&gt;
+        &lt;action id="CleanAll" img="blue/cleanall.png" cmd="$(GO)" args="clean -i" save="all" output="true"/&gt;
+        &lt;action id="Test" img="blue/test.png" key = "Ctrl+T" cmd="$(GO)" args="test" save="all" output="true" codec="utf-8"/&gt;
+        &lt;action id="RunTerm" img="blue/runterm.png" key="Ctrl+Shift+F5" cmd="$(LITEIDE_EXEC)" args="$(LITEIDE_EXECOPT) $(GOEXEC) $(TARGETNAME) $(TARGETARGS)" output="false" readline="true"/&gt;
+        &lt;action id="Run" img="blue/run.png" key="Ctrl+F5" cmd="$(TARGETPATH)" args="$(TARGETARGS)" output="true" codec="utf-8" readline="true"/&gt;
+        &lt;action id="BuildAndRun" img="blue/buildrun.png" key="Ctrl+R;Ctrl+F7" task="Build;Run"/&gt;
+        &lt;action id="GoFmt" img="blue/fmt.png" cmd="$(GO)" args="fmt" save="all" output="true" regex="$(ERRREGEX)"/&gt;
+    &lt;/mime-type&gt;    
 &lt;/mime-info&gt;</pre>
 <ul>
 <li>lookup mime-type: if no project, load example.go first lookup Makefile or *.e64 to use build toolbar</li>
 <li>action task: order execution defined action id list</li>
 </ul>
-
-<p>Example linux gomake.xml</p>
-<pre>
-&lt;?xml version="1.0" encoding="UTF-8"?&gt;
-&lt;mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'&gt;
-&lt;mime-type type="text/x-gomake" id="gomake"&gt;
-&lt;action id="Build" img="go/build.png" key="F7" cmd="gomake" args="${PROJECTNAME} all" save="project" output="true" codec="" regex="([\w\d:_\\/\.]+):(\d+)" /&gt;
-&lt;action id="Rebuild" img="go/rebuild.png" key="CTRL+F7" cmd="gomake" args="-B ${PROJECTNAME} all" save="project" output="true" codec="" regex="([\w\d:_\\/\.]+):(\d+)" /&gt;
-&lt;action id="Clean" img="go/clean.png" cmd="gomake" args="${PROJECTNAME} clean" save="project" output="true"/&gt;
-&lt;action id="Nuke" img="go/nuke.png" cmd="gomake" args="${PROJECTNAME} nuke" save="project" output="true"/&gt;
-&lt;action id="Install" img="go/install.png" cmd="gomake" args="${PROJECTNAME} install" save="project" output="true"/&gt;
-&lt;action id="Test" img="go/test.png" key = "ALT+F5" cmd="gotest" args="${PROJECTNAME}" save="project" output="true" codec="utf-8"/&gt;
-&lt;action id="Exec" img="go/exec.png" key="F5" cmd="/usr/bin/xterm" args="-e ${LITEAPPDIR}/goexec  ${TARGETNAME}" output="false"/&gt;
-&lt;action id="Run" img="go/run.png" key="CTRL+F5" cmd="${TARGETPATH}" args="" output="true" codec="utf-8"/&gt;
-&lt;action id="BuildAndRun" img="go/buildandrun.png" key="CTRL+F7" task="Build;Run"/&gt;
-&lt;/mime-type&gt;
-&lt;/mime-info&gt;
-</pre>
-
 
 <h2 id="gocode">GolangCode Plugin</h2>
 <p>Use gocode word complete, example <code>fmt.</code></p>
@@ -151,12 +139,14 @@ LITEIDE_GDB=gdb64
 
 <h2 id="golangfmt">GolangFmt Plugin</h2>
 <p>Golang gofmt plugin</p>
-<h3>Need find gnu diff in PATH</h3>
 
-<h3>Gofmt Setup And Auto Format Option</h3>
+<h3>Gofmt Setup</h3>
+
 <p>Menu -> View -> Options -> GolangFmt </p>
-<p>Use diff : use gofmt -d or not</p>
-<p>When the editor is saved auto fmt</p>
+<ul>
+<li>Use diff : use gofmt -d or not,need lookup gnu diff in PATH</li>
+<li>When the editor is saved auto fmt: need for gofmt -d</li>
+</ul>
 
 <h2>Other</h2>
 <h3>Problems with window resizing under linux</h3>
