@@ -52,17 +52,17 @@ void ParserRunnable::setData( const QByteArray& data ) {
 
 void ParserRunnable::run()
 {
-  qDebug() << Q_FUNC_INFO;
+  //qDebug() << Q_FUNC_INFO;
 
   bool ok;
   Parser parser;
   QVariant result = parser.parse (d->m_data, &ok);
   if (ok) {
-    qDebug() << "successfully converted json item to QVariant object";
+    //qDebug() << "successfully converted json item to QVariant object";
     emit parsingFinished(result, true, QString());
   } else {
     const QString errorText = tr("An error occurred while parsing json: %1").arg(parser.errorString());
-    qCritical() << errorText;
+    //qCritical() << errorText;
     emit parsingFinished(QVariant(), false, errorText);
   }
 }
